syntax = "proto3";

package upload;
option go_package = "./upload";

message Base{
  int32 Code = 1;
  string Msg = 2;
}

message FileUploadReq {
  bytes  File = 1;
  string FileName = 2;
  string Path = 3;
  string BucketName = 4;
}

message FileUploadRes {
  Base base = 1;
  FileUploadResData data = 2;
}

message FileUploadResData {
  string FileName = 1;
  string Path = 2;
  string ETag = 3;
  uint64 Size = 4;
}

message ImageUploadReq {
  bytes  File = 1;
  string FileName = 2;
  string Path = 3;
  string OriPath = 4;
  uint32 Quality = 5;
  string BucketName = 6;
}

message ImageUploadRes {
  Base base = 1;
  ImageUploadResData data = 2;
}

message ImageUploadResData {
  string Path = 1;
  string OriPath = 2;
  string ETag = 3;
  string OriETag = 4;
  uint64 Size = 5;
  uint64 OriSize = 6;
}

service Upload {
  rpc FileUpload(FileUploadReq) returns(FileUploadRes);
  rpc ImageUpload(ImageUploadReq) returns(ImageUploadRes);
}
